Add code to mark todo list items done or not
Co-Authored-By: Evgeniya Chernaya <evgenya.chernaya@gmail.com>

--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -15,6 +15,15 @@
 @foreach (Item item in Model)
 {
   <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId })</li>
+  @if(item.Done)
+  {
+    <p>DONE</p>
+  }
+  @using (Html.BeginForm("ItemDone", "Items"))
+  {
+    @Html.Hidden("id", @item.ItemId)
+    <input type="submit" value="Done"/>
+  }
 }
 
 <p>@Html.ActionLink("Add new item", "Create")</p>
