--- a/ToDoList/Views/Items/Details.cshtml
+++ b/ToDoList/Views/Items/Details.cshtml
@@ -7,6 +7,7 @@
 <h2>Item Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</h3>
+<h3>@Html.DisplayNameFor(model => model.DueDate): @Html.DisplayFor(model => model.DueDateInfo)</h3>
 @if(@Model.Categories.Count == 0)
 {
   <p>This itme does not belong to any categories</p>
